# python-post022_out_of_anaconda

./: LICENSE  pyproject.toml  readme.md  readme.org
doc/: python-post022_out_of_anaconda.org
rikki/: __main__.py  models.py  parser.py  requirement.py
tests/: lite.yaml  lite_full.yaml  test_load.py  test_requirements.py
